# Opencl_FFT_and_MatrixMultiplication

./: README.md
FFT_clFFT/: FFT_Test_clFFT.py  GenGraph_clFFT.py
FFT_clFFT/cpp/: CMakeLists.txt  FFT_clFFT.cpp
MatrixMultiplication_clBLAS/: GenGraph_clBLAS.py  MatrixMul_Test_clBLAS.py
MatrixMultiplication_clBLAS/cpp/: CMakeLists.txt  MMUL_clBLAS.cpp
